--- a/7lalak/Home1ViewCell.xib
+++ b/7lalak/Home1ViewCell.xib
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="5056" systemVersion="12F45" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
+        <deployment defaultVersion="1552" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
     </dependencies>
     <objects>
@@ -28,8 +29,8 @@
                         <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="ic_arrow_next.png" translatesAutoresizingMaskIntoConstraints="NO" id="IAG-bp-eI1">
-                        <rect key="frame" x="293" y="35" width="23" height="23"/>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="ic_new_arrow.png" translatesAutoresizingMaskIntoConstraints="NO" id="IAG-bp-eI1">
+                        <rect key="frame" x="292" y="32" width="27" height="26"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     </imageView>
                 </subviews>
@@ -42,7 +43,7 @@
     </objects>
     <resources>
         <image name="bg_row.png" width="5" height="151"/>
-        <image name="ic_arrow_next.png" width="32" height="31"/>
         <image name="ic_defualt_image.png" width="521" height="520"/>
+        <image name="ic_new_arrow.png" width="32" height="32"/>
     </resources>
 </document>
